# asterix-rs

./: Cargo.toml
src/: custom_read_write.rs  data_item.rs  lib.rs
tests/: public_api.rs
